<resources>
    <string name="app_name">dietLogin</string>
    <string name="welcome_to_healthvisor">Welcome to Your Diet Assistant</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="todo">TODO</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account_new_user">Create Account New User</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="clear_here_to_login">Click Here to Login</string>
    <string name="title_activity_new_dash">newDash</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
</resources>