<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".login"
        android:background="@color/white"
        android:padding="20dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="217dp"
            android:layout_height="159dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/logimg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/sign_up"
            android:textColor="@color/teal_700"
            android:textSize="30sp"
            android:layout_gravity="center"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account_new_user"
            android:textSize="20sp"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fullname_text_field_design"
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                android:hint="@string/enter_full_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/username_text_field_design"
                android:layout_marginTop="7dp"
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                android:hint="@string/enter_username">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email_text_field_design"
                android:layout_marginTop="7dp"
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                android:hint="@string/enter_email_address">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/phone_text_field_design"
                android:layout_marginTop="7dp"
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                android:hint="@string/enter_phone_number">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:id="@+id/pass_input_field"
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                android:hint="@string/password"
                app:passwordToggleEnabled="true">


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>


        <Button
            android:onClick="registerbuttonclick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:elevation="5dp"
            android:text="@string/register"
            android:textColor="@color/black"
            android:backgroundTint="#55B5A6"
            android:textSize="17sp" />

        <Button
            android:onClick="loginbuttonclick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/white"
            android:elevation="5dp"
            android:text="@string/clear_here_to_login"
            android:textColor="@color/black"
            android:textSize="11sp" />


    </LinearLayout>

</ScrollView>